Aplicando responsive y resolviendo border-radius del Iframe

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="IPhone">
-        <iframe class="iframe" src="https://open.spotify.com/embed?uri=spotify:user:spotify:playlist:37i9dQZF1DZ06evO43Szeg" width="313" height="678" frameborder="0" allowtransparency="true" allow="encrypted-media" style="overflow-y: auto"></iframe>
+        <div class="wrap">
+            <iframe class="iframe" src="https://open.spotify.com/embed?uri=spotify:user:spotify:playlist:37i9dQZF1DZ06evO43Szeg" frameborder="0" allowtransparency="true" allow="encrypted-media" style="overflow-y: auto"></iframe>
+        </div>
     </div>
     <div class="follow">
         <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:6S2OmqARrzebs0tKUEyXyp?si=laipY2zXTVe0prr6vNOUsQ&size=detail&theme=light" width="215" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
